# augustus

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  json-c.nix  shell.nix  vma.nix
include/: augustus_allocator.h  augustus_camera.h  augustus_common.h  augustus_enemies.h  augustus_game.h  augustus_gfx.h  augustus_hash_functions.h  augustus_level.h  augustus_math.h  augustus_physics.h  augustus_player.h  augustus_sprites.h  augustus_string.h  augustus_window.h  augustus_world.h
resources/: player.json
resources/shaders/: .gitignore  Makefile  basic.frag  basic.vert  default.frag  default.vert
resources/shaders/spirv/: basic.frag.spv  basic.vert.spv  default.frag.spv  default.vert.spv
resources/textures/: tileset.aseprite
resources/tiled/: augustus.tiled-session  test.tmx  test_tileset.tsx
src/: augustus_common.c  augustus_enemies.c  augustus_entry.c  augustus_game.c  augustus_gfx.c  augustus_hash_functions.c  augustus_level.c  augustus_level_read.c  augustus_main.c  augustus_math.c  augustus_physics.c  augustus_player.c  augustus_sprites.c  augustus_string.c  augustus_world.c  augustus_world_serialization.c
